Rework pooling ang queueing strategy

--- a/apn.cabal
+++ b/apn.cabal
@@ -27,8 +27,10 @@ library
                      , data-default
                      , http2
                      , http2-client
+                     , random
                      , resource-pool
                      , text
+                     , time
                      , tls
                      , x509
                      , x509-store
