--- a/push-notify-apn.cabal
+++ b/push-notify-apn.cabal
@@ -11,7 +11,7 @@ license:             BSD3
 license-file:        LICENSE
 author:              Hans-Christian Esperer
 maintainer:          hc@hcesperer.org
-copyright:           2017 Hans-Christian Esperer
+copyright:           2017 Memrange UG
 category:            Network, Cloud, Mobile
 build-type:          Simple
 extra-source-files:  README.md
