Adjust README a bit

--- a/push-notify-apn.cabal
+++ b/push-notify-apn.cabal
@@ -1,11 +1,12 @@
 name:                push-notify-apn
-version:             0.1.0.1
-synopsis:            Send push notifications to mobile devices
+version:             0.1.0.2
+synopsis:            Send push notifications to mobile iOS devices
 description:
     push-notify-apn is a library and command line utility that can be used to send
-    push notifications to mobile devices. Push notifications are small
+    push notifications to mobile devices running iOS. Push notifications are small
     messages that can be sent to apps on smart phones and tablets
-    without the need to keep open a long lived TCP connection per app.
+    without the need to keep open a long lived TCP connection per app, dramatically
+    reducing the power consumption in standby mode.
 homepage:            https://github.com/memrange/apn#readme
 license:             BSD3
 license-file:        LICENSE
