--- a/push-notify-apn.cabal
+++ b/push-notify-apn.cabal
@@ -30,7 +30,7 @@ library
                      , containers
                      , data-default
                      , http2
-                     , http2-client == 0.3.0.2
+                     , http2-client >= 0.5.0.0 && < 0.6
                      , random
                      , text
                      , time
