--- a/push-notify-apn.cabal
+++ b/push-notify-apn.cabal
@@ -48,6 +48,7 @@ executable sendapn
                      , push-notify-apn
                      , bytestring
                      , optparse-applicative
+                     , semigroups
                      , text
   default-language:    Haskell2010
 
