--- a/push-notify-apn.cabal
+++ b/push-notify-apn.cabal
@@ -32,6 +32,7 @@ library
                      , http2
                      , http2-client
                      , random
+                     , semigroups
                      , text
                      , time
                      , tls
