--- a/push-notify-apn.cabal
+++ b/push-notify-apn.cabal
@@ -63,6 +63,7 @@ test-suite apn-test
                      , hspec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
+  other-modules:       Network.PushNotify.APNSpec
 
 source-repository head
   type:     git
