--- a/push-notify-apn.cabal
+++ b/push-notify-apn.cabal
@@ -31,6 +31,7 @@ library
                      , data-default
                      , http2
                      , http2-client
+                     , lifted-base
                      , random
                      , semigroups
                      , text
