--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-11.12
+resolver: lts-14.27
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -40,7 +40,7 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
-- http2-client-0.8.0.2
+- http2-client-0.9.0.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
@@ -48,6 +48,7 @@ flags: {}
 # Extra package databases containing global packages
 extra-package-dbs: []
 
+allow-newer: true
 # Control whether we use the GHC we find on the path
 # system-ghc: true
 #
