Totally remove custom connection pool in favor of Data.Pool

--- a/push-notify-apn.cabal
+++ b/push-notify-apn.cabal
@@ -33,6 +33,7 @@ library
                      , http2-client
                      , lifted-base
                      , random
+                     , resource-pool
                      , semigroups
                      , text
                      , time
