--- a/push-notify-apn.cabal
+++ b/push-notify-apn.cabal
@@ -43,6 +43,12 @@ library
                      , x509-store
                      , x509-system
 
+  ghc-options:
+    -Werror -W -fwarn-unused-imports -fwarn-unused-binds -fwarn-orphans
+    -fwarn-unused-matches -fwarn-unused-do-bind -fwarn-wrong-do-bind
+    -fwarn-missing-signatures -fno-warn-partial-type-signatures
+    -Wredundant-constraints
+
   default-language:    Haskell2010
 
 executable sendapn
