--- a/push-notify-apn.cabal
+++ b/push-notify-apn.cabal
@@ -30,7 +30,7 @@ library
                      , containers
                      , data-default
                      , http2
-                     , http2-client
+                     , http2-client >= 0.10.0.1
                      , lifted-base
                      , mtl
                      , random
